# lysa

./: CMakeLists.txt  README.md
cmake/: libraries.cmake
src/: AABB.ixx  AssetsPack.cpp  AssetsPack.ixx  AsyncPool.cpp  AsyncPool.ixx  AsyncQueue.cpp  AsyncQueue.ixx  CommandBuffer.ixx  Components.ixx  Context.cpp  Context.ixx  DirectoryWatcher.ixx  Event.cpp  Event.ixx  Exception.ixx  Flecs.ixx  Global.ixx  Input.cpp  Input.ixx  InputEvent.ixx  Lysa.cpp  Lysa.ixx  Manager.ixx  Math.cpp  Math.ixx  Memory.cpp  Memory.ixx  VirtualFS.cpp  VirtualFS.ixx
src/bindings/lua/: Lua.cpp  Lua.ixx  ecs.lua  flecs.lua  lysa.lua
src/components/: Components.ixx
src/depends/flecs/: flecs.hpp
src/ecs/components/: Components.ixx  Transform.cpp  Transform.ixx
src/ecs/systems/: Systems.cpp  Systems.ixx  Transform.cpp
src/editors/zerobrane_studio/: user.lua
src/lysa/: Application.ixx  Configuration.ixx  Constants.ixx  Context.cpp  Context.ixx  Event.cpp  Event.ixx  Flecs.cpp  Flecs.ixx  Frustum.cpp  Frustum.ixx  Global.cpp  Log.cpp  Log.ixx  Lua.cpp  Lua.ixx  Lysa.cpp  Lysa.ixx  Main.cpp  Main.ixx  Manager.ixx  Math.cpp  Math.ixx  Memory.cpp  Renderer.cpp  Renderer.ixx  Types.ixx  VirtualFS.cpp  VirtualFS.ixx
src/lysa/bindings/lua/: Lua.cpp  Lua.ixx
src/lysa/depends/flecs/: flecs.c  flecs.cpp  flecs.h  flecs.hpp
src/lysa/editors/zerobrane_studio/: user.lua
src/lysa/editors/zerobrane_studio/api/: lysa.lua
src/lysa/editors/zerobrane_studio/api/lysa/: context.lua  event.lua  render_target.lua  rendering_window.lua
src/lysa/os/win32/: Main.cpp  Renderer.cpp  RenderingWindow.cpp
src/lysa/pipelines/: FrustumCulling.cpp  FrustumCulling.ixx
src/lysa/renderers/: Configuration.ixx  ForwardRenderer.cpp  ForwardRenderer.ixx  GraphicPipelineData.cpp  GraphicPipelineData.ixx  Renderer.cpp  Renderer.ixx  SceneRenderContext.ixx
src/lysa/renderers/renderpasses/: DepthPrepass.cpp  DepthPrepass.ixx  ForwardColor.cpp  ForwardColor.ixx  Renderpass.cpp  Renderpass.ixx
src/lysa/resources/: Manager.ixx  RenderTarget.cpp  RenderTarget.ixx  RenderingWindow.cpp  RenderingWindow.ixx  Resources.ixx  ResourcesLocator.cpp  ResourcesLocator.ixx  ResourcesManager.ixx  Viewport.cpp  Viewport.ixx
src/os/win32/: DirectoryWatcher.cpp  Input.cpp  Main.cpp  RenderingWindow.cpp
src/pipelines/: FrustumCulling.cpp  FrustumCulling.ixx
src/renderers/: Configuration.ixx  DeferredRenderer.cpp  DeferredRenderer.ixx  ForwardRenderer.cpp  ForwardRenderer.ixx  GlobalDescriptorSet.cpp  GlobalDescriptorSet.ixx  GraphicPipelineData.cpp  GraphicPipelineData.ixx  Renderer.cpp  Renderer.ixx  Samplers.cpp  Samplers.ixx  SceneFrameData.cpp  SceneFrameData.ixx  SceneRenderContext.cpp  SceneRenderContext.ixx  Vector2DRenderer.cpp  Vector2DRenderer.ixx  Vector3DRenderer.cpp  Vector3DRenderer.ixx  VectorRenderer.cpp  VectorRenderer.ixx
src/renderers/renderpasses/: BloomPass.cpp  BloomPass.ixx  DepthPrepass.cpp  DepthPrepass.ixx  FXAAPass.ixx  ForwardColor.cpp  ForwardColor.ixx  ForwardColorPass.cpp  ForwardColorPass.ixx  GBufferPass.cpp  GBufferPass.ixx  GammaCorrectionPass.ixx  LightingPass.cpp  LightingPass.ixx  PostProcessing.cpp  PostProcessing.ixx  Renderpass.cpp  Renderpass.ixx  SMAAPass.ixx  SSAOPass.cpp  SSAOPass.ixx  ShaderMaterialPass.ixx  ShadowMapPass.cpp  ShadowMapPass.ixx  TransparencyPass.cpp  TransparencyPass.ixx
src/resources/: Camera.ixx  Environment.ixx  Font.cpp  Font.ixx  Image.cpp  Image.ixx  Light.ixx  Manager.ixx  Material.cpp  Material.ixx  Mesh.cpp  Mesh.ixx  MeshInstance.cpp  MeshInstance.ixx  RenderTarget.cpp  RenderTarget.ixx  RenderView.ixx  RenderingWindow.cpp  RenderingWindow.ixx  Resources.ixx  ResourcesLocator.ixx  ResourcesManager.ixx  ResourcesRegistry.ixx  Samplers.cpp  Samplers.ixx  Scene.cpp  Scene.ixx  SceneContext.cpp  SceneContext.ixx  Texture.ixx  Viewport.cpp  Viewport.ixx
src/shaders/: frustum_culling_shadowmap.comp.slang  scene.inc.slang
src/shaders/deferred/: deferred.inc.slang
src/shaders/forward/: forward.frag.slang
src/shaders/lighting/: lighting.inc.slang
src/shaders/shadows/: shadows.inc.slang
src/systems/: MeshInstance.cpp  MeshInstance.ixx  Systems.cpp  Systems.ixx
src/utils/: AsyncPool.ixx  AsyncTasksPool.ixx  BlurData.ixx  CommandBuffer.cpp  DeferredTasksBuffer.ixx  DirectoryWatcher.ixx  Log.cpp  Log.ixx
